add basic tracks

--- a/ui/src/app/playlists/all-Playlists/playlists.component.scss
+++ b/ui/src/app/playlists/all-Playlists/playlists.component.scss
@@ -3,6 +3,7 @@ h1 {
 }
 .playlists-wrap {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     mat-card {
         display: flex;
