--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,1 +1,16 @@
-<router-outlet></router-outlet>
+<app-side-nav 
+  [sidenavTemplateRef]="navContent"
+  [direction]="navDirection" 
+  [navWidth]="280" 
+  [duration]="0.5"></app-side-nav>
+<div class="main-container">
+  <app-header></app-header>
+  <section>
+    <router-outlet></router-outlet>
+  </section>
+</div>
+<ng-template #navContent>
+  <div class="nav-item" *ngFor="let navItem of navItems" (click)="navigate(navItem)">
+    {{navItem.name}}
+  </div>
+</ng-template>
