--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -1,4 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    font-family: 'Prompt', sans-serif;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    app-root {
+        flex: 1;
+    }
+}
