add cover file upload

--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -1,5 +1,13 @@
 <header>
     <div class="header-menu">
         <span (click)="toggleSideNav()" class="menu-icon material-icons">menu</span>
+        <form class="example-form">
+            <mat-form-field class="example-full-width" appearance="outline">
+                <span matPrefix> </span>
+                <input type="tel" matInput placeholder="Search" name= "search">
+                <button matSuffix mat-button><mat-icon >search</mat-icon></button>
+            </mat-form-field>
+            <br/>
+        </form>
     </div>
 </header>
