--- a/ui/src/app/playlists/show-playlist/show-playlist.component.scss
+++ b/ui/src/app/playlists/show-playlist/show-playlist.component.scss
@@ -1,28 +1,43 @@
-mat-card {
-    padding: 0;
-    mat-card-content {
-        height: 30rem;
-        display: flex;
-        justify-content: flex-end;
-        flex-direction: column;
-        background-image: url('../../../assets/default_playlist_cover.jpg');
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        width: auto;
-        padding: 1rem;
-        .pl-name {
-            font-size: 3rem;
-            flex: .2;
+.playlist-info {
+    margin-bottom: 1rem;
+    mat-card {
+        padding: 0;
+        mat-card-content {
+            height: 30rem;
             display: flex;
-            flex-direction: column;
             justify-content: flex-end;
-        }
-        .pl-desc {
-            font-size: 1rem;
-            flex: .2;
-            display: flex;
             flex-direction: column;
-            justify-content: center;
+            background-image: url('../../../assets/default_playlist_cover.jpg');
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            width: auto;
+            padding: 1rem;
+            .pl-info {
+                font-size: 3rem;
+                flex: .2;
+                display: flex;
+                img {
+                    width: 100px;
+                    height: 100px;
+                }
+                // flex-direction: column;
+                // justify-content: flex-end;
+                .pl-name {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+            }
+            .pl-desc {
+                font-size: 1rem;
+                flex: .2;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
         }
     }
+}
+.tracks-list {
+    padding: 2rem;
 }
