--- a/ui/src/app/tracks/all-tracks/all-tracks.component.html
+++ b/ui/src/app/tracks/all-tracks/all-tracks.component.html
@@ -1,18 +1,3 @@
-<mat-card *ngFor="let track of tracks">
-    <mat-card-title>Play button goes here</mat-card-title>
-    <mat-card-content>
-        <div class="tracks-wrap" >
-            <div class="track">
-                {{track.cover}}
-                {{track.name}}
-            </div>
-            <div class="track">
-                2:53
-                {{track.artist}}
-            </div>
-        </div>
-    </mat-card-content>
-    <mat-card-actions>
-        <button mat-button mat-raised-button color="primary" (click)="openPlaylistDialog(track.id)">Go to Playlist</button>
-    </mat-card-actions>
-</mat-card>
+<ng-container *ngFor="let track of tracks">
+    <app-track-line-item [track]="track" [allowActions]="true"></app-track-line-item>
+</ng-container>
