--- a/ui/src/app/tracks/all-tracks/all-tracks.component.html
+++ b/ui/src/app/tracks/all-tracks/all-tracks.component.html
@@ -1,3 +1,14 @@
-<ng-container *ngFor="let track of tracks">
-    <app-track-line-item [track]="track" [allowActions]="true"></app-track-line-item>
+<ng-container *ngIf="tracks?.length">
+    <button mat-button mat-raised-button color="primary" (click)="goToNewTrack()">Add Track</button>
+    <ng-container *ngFor="let track of tracks">
+        <app-track-line-item [track]="track" [allowActions]="true"></app-track-line-item>
+    </ng-container>
 </ng-container>
+
+<ng-container *ngIf="!tracks?.length">
+    <app-no-result-component>
+        <!-- <button *ngIf="tracks" mat-button mat-raised-button color="primary" (click)="goToNewTrack()">Add Track</button> -->
+        <a routerLink="/new-track"><button mat-button mat-raised-button color="primary"> Create your first track </button></a>
+    </app-no-result-component>
+</ng-container>
+
