player from scratch

--- a/ui/src/app/playlists/show-playlist/show-playlist.component.html
+++ b/ui/src/app/playlists/show-playlist/show-playlist.component.html
@@ -19,10 +19,10 @@
     <button mat-button mat-raised-button color="primary" (click)="openTracksDialog()">Add more Tracks</button>
 </div>
 <div class="tracks-list" *ngIf="playlist">
-    <ng-container *ngFor="let track of playlist.tracks">
-        <app-track-line-item [track]="track"></app-track-line-item>
+    <ng-container *ngFor="let track of playlist.tracks; let i = index">
+        <app-track-line-item [track]="track" (click)="playTrack(track, i)"></app-track-line-item>
     </ng-container>
 </div>
 <div>
-    Player goes here
+    <app-player [files]="tracks" [playTrack]="currentActiveTrack"></app-player>
 </div>
