--- a/ui/src/app/tracks/track-line-item/track-line-item.component.html
+++ b/ui/src/app/tracks/track-line-item/track-line-item.component.html
@@ -2,7 +2,6 @@
     <mat-card-title>
         <img src='../../../assets/default_track_cover.jpeg' alt="">
     </mat-card-title>
-    <!-- <mat-card-content (click)="goToTrack()"> -->
     <mat-card-content>
         <div class="tracks-wrap" >
             <div class="track">
@@ -15,6 +14,6 @@
     </mat-card-content>
     <mat-card-actions>
         <button *ngIf="allowActions" mat-button mat-raised-button color="primary" (click)="openPlaylistDialog(track.id)">Add to Playlist</button>
-        <button *ngIf="allowSelection" mat-button mat-raised-button color="primary" (click)="selectTrack(track)">Select</button>
+        <mat-checkbox color="primary" *ngIf="allowSelection" (change)="selectTrack($event.checked, track)"></mat-checkbox>
     </mat-card-actions>
 </mat-card>
