--- a/ui/src/app/tracks/new-track/new-track.component.html
+++ b/ui/src/app/tracks/new-track/new-track.component.html
@@ -4,7 +4,7 @@
         <div class="input-wrapper">
             <input type="file" #trackFile id="trackFile" class="ng-hide" name="trackFile"
                 (change)="onFileChange($event)" accept=".mp3,audio/*" />
-            <label for="trackFile" class="md-button md-raised md-primary">
+            <label for="trackFile">
                     <span>
                         <mat-icon>cloud_upload</mat-icon>
                         Chose a file
