--- a/ui/src/app/tracks/track-line-item/track-line-item.component.scss
+++ b/ui/src/app/tracks/track-line-item/track-line-item.component.scss
@@ -21,5 +21,47 @@ mat-card {
     }
     img {
         width: 60px;
+        position: relative;
     }
+    .play-icon{
+        position: absolute;
+        top: 16px;
+        width: 60px;
+        height: 60px;
+        line-height: 70px;
+        text-align: center;
+        background: rgb(0 0 0 / 30%);
+        cursor: pointer;
+        transition-duration: 0.5s;
+    }
+    .play-icon:hover{
+        background: rgb(0 0 0 / 70%); 
+    }
+    .playing{
+        position: absolute;
+        top: 16px;
+        width: 60px;
+        height: 60px;
+        line-height: 60px;
+        text-align: center;
+        background: rgb(0 0 0 / 30%);
+        cursor: pointer;
+        transition-duration: 0.5s;
+        font-size: 14px;
+        visibility: hidden;
+    }
+}
+:host{
+    &.playingtrack{
+        mat-card{
+            background-color: #c2315c;
+            .play-icon{
+                visibility: hidden;
+            }
+            .playing{
+                visibility: visible;
+            }
+        }
+    }
+    
 }
