--- a/ui/src/app/side-nav/side-nav.component.scss
+++ b/ui/src/app/side-nav/side-nav.component.scss
@@ -13,6 +13,7 @@
     }
 
     .side-nav-bar-menu-container {
+        background: rgb(66, 66, 66) !important;
         position: absolute;
         top: 0;
         bottom: 0;
