--- a/ui/src/app/header/header.component.scss
+++ b/ui/src/app/header/header.component.scss
@@ -1,33 +1,42 @@
+:host {
+  margin-bottom: 1rem;
+}
 .menu-icon {
-    font-size: 2em;
-    padding: 18px;
-    cursor: pointer;
-    color: #424242;
-    position: fixed;
-    left: 0;
+  font-size: 2em;
+  padding: 18px;
+  cursor: pointer;
+  color: #424242;
+  position: fixed;
+  left: 0;
 }
 .header-menu {
-    display: flex;
-    justify-content: center;
-    .search-wrapper {
-        form {
-            width: 600px;
-            input {
-                width: 100%;
-            }
-        }
-        app-search-results {
-            display: flex;
-            color: black;
-            box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
-            min-height: 300px;
-            z-index: 999999;
-            position: absolute;
-            min-width: 576px;
-            background: white;
-            padding: 1rem;
-            flex-direction: column;
-        }
+  display: flex;
+  justify-content: center;
+  .search-wrapper {
+    form {
+      width: 600px;
+      input {
+        width: 100%;
+        background: #0c0608;
+        border: 1px solid #464646;
+        font-size: 24px;
+        outline: none;
+        color: #464646;
+      }
     }
+    app-search-results {
+      display: flex;
+      color: black;
+      box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%),
+        0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+      min-height: 300px;
+      z-index: 999999;
+      position: absolute;
+      min-width: 574px;
+      padding: 1rem;
+      flex-direction: column;
+      background: #464646;
+      color: lightgray;
+    }
+  }
 }
-
