--- a/ui/src/app/playlists/all-Playlists/playlists.component.scss
+++ b/ui/src/app/playlists/all-Playlists/playlists.component.scss
@@ -1,38 +1,42 @@
 h1 {
-    text-align: center;
+  text-align: center;
 }
 .playlists-wrap {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    mat-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  .playlist-wrapper {
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 300px;
+    width: 226px;
+    flex: 1 0 20%;
+    img {
+      height: 226px;
+      width: 226px;
+      object-fit: cover;
+      border-radius: 4px;
+    }
+    .info-wrapper {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        height: 200px;
-        width: 200px;
-        mat-card-title {
-            text-align: center;
-        }
-        mat-card-content {
-            cursor: pointer;
-            img {
-                height: 188px;
-                width: 200px;
-                object-fit: cover;
+        p{
+            margin: 0;
+            &.playlist-name {
+                font-size: large;
+                font-weight: 500;
             }
-        }
-        mat-card-actions {
-            div {
-                display: flex;
-                justify-content: center;
+            &.playlist-meta {
+                color: gray;
             }
         }
     }
-    margin-bottom: 5rem;
+  }
+  margin-bottom: 5rem;
 }
 .flex-center {
-    display: flex;
-    justify-content: center;
-    flex: 1;
+  display: flex;
+  justify-content: center;
+  flex: 1;
 }
