--- a/ui/src/app/header/header.component.html
+++ b/ui/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <span (click)="toggleSideNav()" class="menu-icon material-icons">menu</span>
         <div class="search-wrapper">
             <form [formGroup]="searchForm">
-                <input type="text" formControlName="query">
+                <input type="text" formControlName="query" placeholder="Search for songs and playlists...">
                 <br/>
             </form>
             <app-search-results (hide)="onHide($event)" *ngIf="playlistsFound?.length || tracksFound?.length" [playlists]="playlistsFound" [tracks]="tracksFound"></app-search-results>
