--- a/ui/src/app/playlists/all-playlists-dialog/all-playlists-dialog.component.scss
+++ b/ui/src/app/playlists/all-playlists-dialog/all-playlists-dialog.component.scss
@@ -2,21 +2,44 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    mat-card {
-        display: flex;
+    margin-bottom: 5rem;
+    .playlist-wrapper {
+        cursor: pointer;
         flex-direction: column;
         justify-content: space-between;
-        height: 200px;
-        width: 200px;
-        mat-card-title {
-            text-align: center;
+        height: 300px;
+        width: 226px;
+        flex: 1 0 20%;
+        img {
+          height: 226px;
+          width: 226px;
+          object-fit: cover;
+          border-radius: 4px;
         }
-        mat-card-actions {
-            div {
-                display: flex;
-                justify-content: center;
+        .info-wrapper {
+            width: 226px;
+            display: flex;
+            flex-direction: column;
+            p{
+                margin: 0;
+                &.playlist-name {
+                    font-size: large;
+                    font-weight: 500;
+                }
+                &.playlist-meta {
+                    color: gray;
+                }
             }
         }
-    }
-    margin-bottom: 5rem;
+      }
+}
+.action {
+    width: 226px;
+}
+.mat-dialog-actions {
+    justify-content: space-between;
+}
+mat-checkbox {
+    justify-content: center;
+    display: flex;
 }
